[package]
name = "awn-core"
version = "0.1.0"
edition = "2021"

[dependencies]
snafu = {version = "0.8.2"}

[target.x86_64-pc-windows-gnu.dependencies.windows]
version = "0.56.0"
optional = true
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[features]
default = ["foreground", "dep-windows"] # default for Windows applications

foreground = [] # use SendInput to control keyboard inputs
dep-windows = ["dep:windows"]


[dev-dependencies]
rand = "0.8.5"